--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                  data-client_id="885860085716-pb7j5h2jrt2kcn5c888nfi1uv6bm6732.apps.googleusercontent.com"
                  data-callback="handleCredentialResponse"
                  data-auto_prompt="false"
-                 data-redirect_uri="https://SEU_USUARIO.github.io/google-maps-scraper/">
+                 data-redirect_uri="https://gleads-1.github.io/GLeads/">
             </div>
             <div class="g_id_signin"
                  data-type="standard"
