--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
                  data-client_id="885860085716-8vsponl4t97d19l3abtc81lunb70vvol.apps.googleusercontent.com"
                  data-callback="handleCredentialResponse"
                  data-auto_prompt="false"
-                 data-redirect_uri="https://gleads-1.github.io/GLeads/"
-                 data-ux_mode="redirect">
+                 data-ux_mode="popup">
             </div>
             <div class="g_id_signin"
                  data-type="standard"
